src/unit_tests/Semantics/success/testing_self.cl
class Complex {
    
};

class Main {
    main() : Main {
        self
    };
};