src/unit_tests/Semantics/fail/testing_self.cl
class Complex {
    
};

class Main {
    main() : Complex {
        self
    };
};